--- a/.github/workflows/mergePR.yml
+++ b/.github/workflows/mergePR.yml
@@ -4,10 +4,10 @@ on:
     types: [closed]
 jobs:
   pr_merged:
-    if: github.event.pull_request.merged == true
+    if: ${{github.event.pull_request.merged == true}}
     runs-on: ubuntu-latest
     steps:
-      - name: Print message
-        run: echo "PR a été mergée"
+      - name: "Merged"
+        run: echo "PR fusionnée"
 
         
